# django-partitioning-backend

./: .cruft.json  .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  Procfile  README.md  conftest.py  docker-compose.yml  manage.py  project.toml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: automerge_approved.yaml  check_commit_style.yaml  run_pre_commit.yaml  sync_django_boilerplate.yaml  updates_dependencies.yaml
apps/core/: admin.py  exceptions.py  models.py  views.py
apps/core/api/: mixins.py  serializers.py  views.py
apps/core/tests/: test_index_view.py
apps/users/: admin.py  apps.py  factories.py  models.py  notifications.py  partitioning.py
apps/users/api/: serializers.py  urls.py  views.py
apps/users/api/auth/: scheme.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_person.py  0003_person_created_person_modified.py  0004_auto_20240423_0345.py
apps/users/tests/: conftest.py
apps/users/tests/test_api/: test_reset_password_api.py
config/: celery.py
config/settings/: .env.template  config.py  local.template.py
config/settings/common/: __init__.py  authentication.py  cache.py  celery.py  databases.py  dev_tools.py  drf.py  installed_apps.py  logging.py  paths.py  sentry.py  storage.py
config/urls/: api_versions.py  debug.py
docs/: CHANGELOG.md  ENVIRONMENT.md  INSTALL.md  TODO.md
invocations/: __init__.py  ci.py  frontend.py  gitlint_custom_rules.py  project.py
libs/: permissions.py  utils.py
libs/api/: filter_backends.py  renderers.py
libs/health_checks/: apps.py  liveness_check.py
libs/health_checks/backends/: email.py
libs/notifications/: email.py
libs/open_api/: extend_schema.py  filters.py  serializers.py  view_fixers.py
